--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
-<!-- Write a simpe page -->
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>My First Web Page</title>
-  </head>
-  <body>
-    <h1>Welcome to my first web page</h1>
-    <p>This is a simple web page to demonstrate the basics of HTML.</p>
-  </body>
+<head>
+    <title>My Page</title>
+</head>
+<body>
+    <!-- @copilot, please generate a navigation panel on the left -->
+    <nav>
+      <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+      </ul>
+  </nav>
+  <!-- @copilot, please generate a header with a logo and a title -->
+  <header>
+      <img src="logo.png" alt="Logo">
+      <h1>Welcome to my page</h1>
+  </header>
+  <!-- @copilot, please generate a section with a main content -->
+  <section>
+      <article>
+          <h2 id="home">Home</h2>
+          <p>Welcome to my page. This is the home page.</p>
+      </article>
+      <article>
+          <h2 id="about">About</h2>
+          <p>This is my personal page. I'm a web developer.</p>
+      </article>
+      <article>
+          <h2 id="contact">Contact</h2>
+          <p>You can contact me at
+
 </html>
